# whisper-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  桌面端改造方案.md
public/: privacy.html  terms.html
scripts/: regen_icons.py
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  updater.rs
src/api/: admin.ts  auth.ts  index.ts
src/components/: UpdatePrompt.vue
src/composables/: useUpdateCheck.ts
src/router/: index.ts
src/stores/: theme.ts  user.ts
src/styles/: element-overrides.css  tokens.css
src/views/: Login.vue
src/views/admin/: Announcements.vue  Blacklist.vue  Cards.vue  CloudUpdate.vue  CloudVars.vue  Dashboard.vue  DeviceBlacklist.vue  Docs.vue  GlobalLogs.vue  Layout.vue  Logs.vue  LuaScripts.vue  Monitor.vue  Settings.vue  Software.vue  SubAccounts.vue  SuperadminDashboard.vue  Users.vue
src/views/client/: Layout.vue  Status.vue  Verify.vue
