[package]
name = "app"
version = "4.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
# 自定义更新器使用：流式 HTTP 下载 + 写入临时文件
# 必须显式启用 rustls-tls-webpki-roots，否则 rustls 不带根证书，所有 HTTPS 都会握手失败。
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
futures-util = "0.3"
